fixed spacing

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ nav li{
 #logo{
     margin: 1%;
     font-size: 24px;
-    margin-right: 30%;
+    margin-right: 26%;
     margin-left: 30px;
 }
 
